--- a/index.jade
+++ b/index.jade
@@ -7,7 +7,7 @@ block content
 	.overview
 
 		.instructions
-			p Klicka på de presenter du vill ha. Fler klick ger större vinstchans i utlottningen. Titta in ofta. Presenterna försvinner snabbt!
+			p Klicka på de presenter du vill ha. Fler klick ger större vinstchans i utlottningen. Titta in ofta, presenterna försvinner snabbt!
 
 		.gifts
 			- giftTypeLinkImage = true;
