--- a/css/style.less
+++ b/css/style.less
@@ -211,6 +211,20 @@ button {
 }
 
 
+.footer {
+
+	margin-top: 100px;
+	margin-bottom: 20px;
+	text-align: center;
+
+	a {
+
+		color: #aaa;
+		.letterpress(@background-color);
+	}
+}
+
+
 .overview {
 
 	margin: 0 100px;
