--- a/layout.jade
+++ b/layout.jade
@@ -30,6 +30,9 @@ body
 
 	block content
 
+	.footer
+		a(href='/integritetspolicy.html') integritetspolicy
+
 	//- script(src='/js/vendor/jquery-2.1.3.min.js')
 	block js
 
