FB requires logout.

--- a/layout.jade
+++ b/layout.jade
@@ -27,6 +27,7 @@ body
 			.text
 				h1 Hej, {{user.name}}!
 				p Du har {{user.klicksLeft}} klick kvar idag.
+			button Log Out
 
 	block content
 
