FB requires contact.

--- a/layout.jade
+++ b/layout.jade
@@ -33,6 +33,8 @@ body
 
 	.footer
 		a(href='/integritetspolicy.html') integritetspolicy
+		|  
+		a(href='mailto:info@giftclick.se') kontakt
 
 	//- script(src='/js/vendor/jquery-2.1.3.min.js')
 	block js
