Normalized git page url in link.

--- a/giftType.include.jade
+++ b/giftType.include.jade
@@ -6,7 +6,7 @@
 		else
 			label.outOfStock: span Slut
 		if giftTypeLinkImage
-			a(href='/gifts/'+giftType.sku): img(src='/gifts/'+giftType.sku+'/640x480.jpg')
+			a(href='/gifts/'+giftType.sku+'/'): img(src='/gifts/'+giftType.sku+'/640x480.jpg')
 		else
 			img(src='/gifts/'+giftType.sku+'/640x480.jpg')
 	if giftTypeShowDescription
