Added Adrecord ads.

--- a/css/style.less
+++ b/css/style.less
@@ -363,6 +363,11 @@ button {
 				> span.count-down { transition: opacity @transition-time/2 linear @transition-time/2; }
 			}
 		}
+
+		a.ad {
+
+			margin: 50px 0;
+		}
 	}
 }
 
