--- a/css/style.less
+++ b/css/style.less
@@ -342,7 +342,7 @@ button {
 			}
 
 			.color (@color-cream);
-			color: darken(@color-cream, 40%);
+			color: desaturate(darken(@color-cream, 30%), 5%);
 
 			&.out-of-stock,
 			&.count-down {
