Easier to have all images in one folder.

--- a/giftType.include.jade
+++ b/giftType.include.jade
@@ -6,8 +6,8 @@
 		else
 			label.outOfStock: span Slut
 		if giftTypeLinkImage
-			a(href='/gifts/'+giftType.sku+'/'): img(src='/gifts/'+giftType.sku+'/640x480.jpg')
+			a(href='/gifts/'+giftType.sku+'/'): img(src='/gift-images/'+giftType.imageFileName)
 		else
-			img(src='/gifts/'+giftType.sku+'/640x480.jpg')
+			img(src='/gift-images/'+giftType.imageFileName)
 	if giftTypeShowDescription
 		p= giftType.description
