Fixed login/out button styles.

--- a/css/markdown.less
+++ b/css/markdown.less
@@ -10,7 +10,7 @@
 
 
 @import (css) 'cssreset-min.css';
-@import (css) 'font-awesome-4.2.0.min.css';
+@import (css) '../font-awesome-4.3.0/css/font-awesome.min.css';
 
 // Set global font for everything.
 * {
