--- a/layout.jade
+++ b/layout.jade
@@ -26,7 +26,7 @@ body
 				p Vi lottar ut presenter. Logga in med ditt Facebook-konto så missar du inga vinster.
 			button.log-in
 				span.icon.fa-facebook-official
-				| &nbsp;&nbsp;&nbsp;Logga in med Facebook
+				span.caption Logga in med Facebook
 
 		.existing-user
 			if !topLevel
@@ -40,7 +40,7 @@ body
 					| Du har 
 					span.userNumClicksLeft
 					|  klick kvar idag.
-			button.log-out &nbsp;&nbsp;&nbsp;Logga ut
+			button.log-out Logga ut
 
 	block content
 
