Adapted overview to mobile.

--- a/index.jade
+++ b/index.jade
@@ -6,8 +6,7 @@ block vars
 block content
 	.overview
 
-		.instructions
-			p Gå in på en presentsida och klicka på Klicka på "Vill ha!". Fler klick ger större vinstchans i utlottningen. Titta in ofta, presenterna försvinner snabbt!
+		p.instructions Gå in på en presentsida och klicka på Klicka på "Vill ha!". Fler klick ger större vinstchans i utlottningen. Titta in ofta, presenterna försvinner snabbt!
 
 		.gifts
 			- giftTypeLinkImage = true;
