Added fb-root element.

--- a/src/layout.jade
+++ b/src/layout.jade
@@ -15,6 +15,8 @@ head
 	link(rel='stylesheet', href='/css/style.css')
 	block css
 body
+	//- FB expects this div to be here.
+	#fb-root
 
 	//- .header.logged-in
 	.header
