--- a/src/layout.jade
+++ b/src/layout.jade
@@ -53,13 +53,10 @@ body
 
 	script.
 		var fbAppId = '!{fbAppId}';
+		var backendHost = '!{backendHost}';
 	script(src='/js/vendor/jquery-2.1.3.min.js')
 	script(src='/js/vendor/underscore-1.8.3.min.js')
 	script(src='/js/vendor/backbone-1.2.1.min.js')
-	script(src='/js/Header.js')
-	script(src='/js/User.js')
-	script(src='/js/App.js')
-	script(src='/js/main.js')
 	block js
 
 	//- Analytics
