--- a/src/index.jade
+++ b/src/index.jade
@@ -15,3 +15,7 @@ block content
 				include giftType.include.jade
 
 block js
+	script(src='/js/Header.js')
+	script(src='/js/User.js')
+	script(src='/js/App.js')
+	script(src='/js/main.js')
