Added FB icon to log out button too.

--- a/src/layout.jade
+++ b/src/layout.jade
@@ -42,7 +42,9 @@ body
 					| Du har 
 					span.userNumClicksLeft
 					|  klick kvar idag.
-			button.log-out Logga ut
+			button.log-out
+				span.icon.fa-facebook-official
+				span.caption Logga ut
 
 	block content
 
