Refactored out the Facebook code to a class separate from the user, and implemented click counting.

--- a/src/giftType.jade
+++ b/src/giftType.jade
@@ -35,6 +35,7 @@ block js
 	script(src='/js/GiftType.js')
 	script(src='/js/GiftButton.js')
 	script(src='/js/Header.js')
+	script(src='/js/Facebook.js')
 	script(src='/js/User.js')
 	script(src='/js/App.js')
 	script(src='/js/main.js')
