--- a/src/index.jade
+++ b/src/index.jade
@@ -16,6 +16,7 @@ block content
 
 block js
 	script(src='/js/Header.js')
+	script(src='/js/Facebook.js')
 	script(src='/js/User.js')
 	script(src='/js/App.js')
 	script(src='/js/main.js')
