--- a/src/layout.jade
+++ b/src/layout.jade
@@ -40,7 +40,7 @@ body
 					| !
 				p
 					| Du har 
-					span.userNumClicksLeft
+					span.userNumClicksLeft ...
 					|  klick kvar idag.
 			button.log-out
 				span.icon.fa-facebook-official
