--- a/src/layout.jade
+++ b/src/layout.jade
@@ -45,6 +45,12 @@ body
 			button.log-out
 				span.icon.fa-facebook-official
 				span.caption Logga ut
+		.address
+			p Ange din adress så att vi kan skicka eventuella vinster.
+			textarea
+			button.save-address
+				span.icon.fa-check
+				span.caption  Spara
 
 	block content
 
@@ -56,6 +62,7 @@ body
 	script.
 		var fbAppId = '!{fbAppId}';
 		var backendHost = '!{backendHost}';
+	script(src='/js/vendor/cookies.js')
 	script(src='/js/vendor/jquery-2.1.3.min.js')
 	script(src='/js/vendor/underscore-1.8.3.min.js')
 	script(src='/js/vendor/backbone-1.2.1.min.js')
